--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
         <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>        
         <script src="Main.js"></script> 
-  
+        <link rel="icon" href="assets/images/favicon.png">
     </head> 
     <body onload="Main();"> 
         <canvas id="fallCanvas" width="400" height="700"></canvas> 
