Testing image preview

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-
-<html> 
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:fb="http://ogp.me/ns/fb#"> 
     <head> 
         <title>Fall</title> 
           <!--hiding mobile highlights
@@ -11,6 +11,7 @@
         <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>        
         <script src="Main.js"></script> 
         <link rel="icon" href="assets/images/favicon.png">
+        <meta property="og:image" content="assets/images/screenshot.png" />
     </head> 
     <body onload="Main();"> 
         <canvas id="fallCanvas" width="400" height="700"></canvas> 
