--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <script src="Main.js"></script> 
         <link rel="icon" href="assets/images/favicon.png">
         <meta property="og:image" content="assets/images/screenshot.png" />
+        <meta property="og:image:width" content="399"/>
+        <meta property="og:image:height" content="702"/>
     </head> 
     <body onload="Main();"> 
         <canvas id="fallCanvas" width="400" height="700"></canvas> 
