--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>        
         <script src="Main.js"></script> 
         <link rel="icon" href="assets/images/favicon.png">
-        <meta property="og:image" content="assets/images/screenshot.png" />
+        <meta property="og:image" content="http://brytai.com/Fall/assets/images/screenshot.png" />
         <meta property="og:image:width" content="399"/>
         <meta property="og:image:height" content="702"/>
     </head> 
