Canvas scales to window and stays centered

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
           <!--hiding mobile highlights
         <style>*{-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}</style> 
    -->
+        <style>
+           canvas {
+           padding-left: 0;
+           padding-right: 0;
+           margin-left: auto;
+           margin-right: auto;
+           display: block;
+        }
+        </style>
         <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script> 
         <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"></script> 
         <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
